# mandelbrot-fraktal-maus

./: .build_metrics.tmp11860  .build_metrics.tmp11908  .build_metrics.tmp16268  .build_metrics.tmp16968  .build_metrics.tmp17192  .build_metrics.tmp17268  .build_metrics.tmp3876  .build_metrics.tmp4864  .build_metrics.tmp8016  .build_metrics.tmp8884  .clangd  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_MINDMAP.md  CMakeLists.txt  CMakePresets.json  ExportMaus.ps1  Files.txt  Friedhof.md  LICENSE  MINDMAP.md  MausGit.ps1  README.MAUS  README.md  build.ps1  imgui.ini  run_build_inner.ps1  src.7z  vcpkg.json  wom.txt  wupp.txt
.build_metrics/: history.jsonl  metrics.json  progress.jsonl  progress_plan.json
.github/workflows/: ci.yml
build-vs/: CMakeCache.txt
ps1Supporter/: MausDelete.ps1  MausGit.ps1  MausGitAutoCommit.ps1  Otter.Build.Support.psm1  build_env.ps1  run_build_inner.ps1
rust/otter_proc/: Cargo.toml
rust/otter_proc/src/: build_metrics.rs  classify.rs  cli.rs  main.rs  metrics.rs  mod.rs  pipeline.rs  prockit.rs  runner.rs  toolchain.rs  utils.rs  vsenv.rs
rust/otter_proc/src/commands/: autogit.rs  cacheguard.rs  clean.rs  detect.rs  envkit.rs  full.rs  mod.rs  winenv.rs
rust/otter_proc/src/runner/: runner_classify.rs  runner_phase.rs  runner_progress.rs  runner_term.rs
src/: async_frame_writer.cpp  async_frame_writer.hpp  bear_CudaPBOResource.cpp  bear_CudaPBOResource.hpp  build.ps1  capybara_api.cuh  capybara_frame_pipeline.cuh  capybara_integration.cuh  capybara_mapping.cuh  capybara_math.cuh  capybara_pixel_iter.cuh  capybara_prelude.cuh  capybara_render_kernel.cu  capybara_selector.cuh  capybara_settings.cuh  capybara_ziter.cuh  colorize_iterations.cu  colorize_iterations.cuh  common.hpp  core_kernel.cu  core_kernel.h  cuda_interop.cu  cuda_interop.hpp  cuda_interop_ctx.cpp  cuda_interop_pbo.cpp  cuda_interop_render.cu  cuda_interop_state.cpp  cuda_interop_state.hpp  dd_real.cu  dd_real.cuh  device_log_policy.hpp  edge_detector.cu  edge_detector.cuh  fps_meter.cpp  fps_meter.hpp  frame_budget_controller.cpp  frame_budget_controller.hpp  frame_capture.cpp  frame_capture.hpp  frame_context.cpp  (+112 more)
src/compute/: boundary.cpp  boundary.hpp  boundary_gpu.cpp
src/input/: callbacks.cpp  callbacks.hpp
src/rendering/: renderer.cpp  renderer.hpp
src/utils/: cuda_utils.cpp  cuda_utils.hpp
