##### Otter: Minimaler Runner-Crate für robuste Prozessausführung & Log-Filter.
##### Schneefuchs: clap v4.5 (derive), Edition 2021, keine weiteren Abhängigkeiten.
##### Maus: Windows-first; liefert Exitcode des Child-Prozesses durch.
##### Datei: rust/otter_proc/Cargo.toml

[package]
name = "otter_proc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
